# w32it

./: CMakeLists.txt  README.md
include/: Exports.h  IHandle.h  Module.h  Process.h  ProcessIterator.h  ProcessVector.h
src/: Module.cpp  Process.cpp  ProcessIterator.cpp  ProcessVector.cpp
